# routes/productos.Routes.ts
@@ -8,15 +8,22 @@ const productoRouter = Router();
 
 
 //ver productos
-productoRouter.get('/', async (req: any, res: Response) => {
+productoRouter.post('/', async (req: any, res: Response) => {
 
     const body = req.body;
-    let query:any = {};
-    
-    query["activo"] = true;
-   
+    let producto: any = body.producto
+    let query: any
+
+    if(!isNaN(producto))
+        query =  {"id": producto } 
+    else
+        query =   {$or:[{"brand": { "$regex": producto, "$options": "i" }},
+                        {"description": { "$regex": producto, "$options": "i" }}
+                        ]}
+
+
     try{
-        const response = await Products.find().exec();
+        const response = await Products.find(query).exec();
         res.status(200).send({
             status:true,
             response: response,
